--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Odin Etch-a-Sketch</title>
 </head>
 <body>
+    <button id="newGridBtn">Create new grid</button><br>
     <div id="container">
 
     </div>
